# FAIR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
IO/: CMakeLists.txt  Descriptor.hpp  IOTypeRegistry.hpp  RootRawHitReader.cpp  RootRawHitReader.hpp
IO/reader/: BinaryRawHitReader.cpp  BinaryRawHitReader.hpp  CMakeLists.txt  ReaderRegistry.hpp  RootInput.hpp  RootRawHitReader.cpp  RootRawHitReader.hpp
IO/writer/: RootOutput.hpp  RootWriterAlg.hpp  WriterRegistry.hpp
adc_to_energy/: AdcToEnergyReadTTreeAlg.cpp  AdcToEnergyReadTTreeAlg.hpp  CMakeLists.txt
calibration/: CMakeLists.txt  RefValues.hpp
calibration/module/pedestal/: CMakeLists.txt  PedestalAlg.cpp  PedestalAlg.hpp
common/: AHCALGeometry.hpp  AlgFactory.hpp  AlgRegistry.hpp  EventStore.hpp  Hit.hpp  IAlg.hpp  Logger.hpp  RunContext.hpp
common/config/: ParseRunConfig.hpp  YAMLLoader.hpp  YAMLUtil.hpp
common/edm/: EDM.hpp  MCinfo.hpp  RawData.hpp  RawHit.hpp  RecoHit.hpp  SimpleFittedTrack.hpp  Track.hpp  TrackFindOutput.hpp  TrueHit.hpp
config/: first.yaml
config/Input/: Input_test.txt
exe/: CMakeLists.txt  EventDisplay2D.cpp  MultiInOneOut.cpp  MultiInOut.cpp  Test.cpp  TestMuonKF.cpp
reco_alg/: CMakeLists.txt
reco_alg/module/: CMakeLists.txt
reco_alg/module/MuonKFAlg/: CMakeLists.txt  MuonKFAlg.cpp  MuonKFAlg.hpp
reco_alg/module/TrackFindAlg/: TrackFindAlg.cpp  TrackFindAlg.hpp
reco_alg/module/TrackFitAlg/: CMakeLists.txt  TrackFitAlg.cpp  TrackFitAlg.hpp
scripts/: sub_lxplus.sdf
